syntax = "proto3";

option go_package ="/hrm";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string acess_token = 1;
}

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {};
}