syntax = "proto3";

option go_package ="/hrm";
import "google/protobuf/timestamp.proto";

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string user_name = 4;
    string password = 5;
    string address = 6;
    string email_id = 7;
    int32 contact_number = 8;
    google.protobuf.Timestamp createdat = 9;
    google.protobuf.Timestamp updated_at = 10;
}
